refactor(extended-1.1): add semantic HTML tags

--- a/style.css
+++ b/style.css
@@ -72,8 +72,7 @@ button:hover {
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -101,7 +100,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+.add__task_title {
   display: block;
   margin: 0 0 20px;
 }
