refactor(extended-2.2): use BEM notation and use querySelector in js

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ input[type="text"]:focus {
   margin: 0 0 20px;
 }
 
-input#new-task {
+input.add__task_input {
   width: 318px;
 }
 
@@ -139,18 +139,18 @@ li > input[type="text"] {
   width: 226px;
 }
 
-button.delete img {
+button.todo__delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+button.todo__delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul.todo__completed label {
   text-decoration: line-through;
   color: #888;
 }
@@ -160,11 +160,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+ul li.todo__edit_mode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.todo__edit_mode label {
   display: none;
 }
