--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+/*  reset style */
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li,
+h3 {
+  list-style: none;
+}
+
+input,
+button {
+  outline: none;
+}
+
 /* Basic Style */
 body {
   background-color: #f8f8f8;
@@ -12,7 +28,7 @@ body {
   text-align: right;
 }
 
-.header img {
+.header__img {
   width: 100%;
 }
 
@@ -42,22 +58,9 @@ body {
   display: flex;
 }
 
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li,
-h3 {
-  list-style: none;
-}
-
-input,
-button {
-  outline: none;
-}
-
-button {
+.add__task_button,
+.todo__edit_btn,
+.todo__delete {
   background: none;
   border: 0px;
   color: #888;
@@ -67,12 +70,15 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.add__task_button:hover,
+.todo__edit_btn:hover,
+.todo__delete:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3 {
+.add__task_title,
+.todo__title{
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -82,7 +88,8 @@ h3 {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.add__task_input,
+.todo__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -95,7 +102,8 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.add__task_input:focus,
+.todo__input:focus {
   color: #333;
 }
 
@@ -105,12 +113,13 @@ input[type="text"]:focus {
   margin: 0 0 20px;
 }
 
-input.add__task_input {
+.add__task_input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.todo__incompleted > *,
+.todo__completed > * {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -120,51 +129,52 @@ li {
   align-items: center;
 }
 
-li > * {
+.todo__incompleted > * > *,
+.todo__completed > * > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.todo__checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.todo__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.todo__input {
   width: 226px;
 }
 
-button.todo__delete img {
+.todo__delete_img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.todo__delete img:hover {
+.todo__delete_img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul.todo__completed label {
+.todo__completed .todo__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.todo__input {
   display: none;
 }
 
-ul li.todo__edit_mode input[type=text] {
+.todo__edit_mode .todo__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.todo__edit_mode label {
+.todo__edit_mode .todo__label {
   display: none;
 }
