--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*  reset style */
-ul {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 li,
@@ -32,7 +33,7 @@ body {
   width: 100%;
 }
 
-.header .header__inf {
+.header__inf {
   font-family: fantasy, cursive;
 }
 
@@ -45,15 +46,7 @@ body {
 .app__todo {
   display: block;
   width: 500px;
-  margin: 0 auto 0;
-}
-.add__task_input,
-.todo__label,
-.todo__input{
-/* .task { */
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
+  margin: 0 auto;
 }
 
 .add__task_wrapper {
@@ -70,29 +63,26 @@ body {
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
-}
+  flex-shrink: 0;
 
-.add__task_btn:hover,
-.todo__edit_btn:hover,
-.todo__delete_btn:hover {
-  color: #3a3a3a;
+  &:hover {
+    color: #3a3a3a;
+  }
 }
 
 /* Heading */
 .add__task_title,
-.todo__title{
+.todo__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
   padding: 30px 0 10px;
-  margin: 0;
   text-transform: uppercase;
 }
 
 .add__task_input,
 .todo__input {
-  margin: 0;
   font-size: 18px;
   line-height: 18px;
   height: 21px;
@@ -102,11 +92,11 @@ body {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
-}
+  flex-grow: 1;
 
-.add__task_input:focus,
-.todo__input:focus {
-  color: #333;
+  &:focus {
+    color: #333;
+  }
 }
 
 /* New Task */
@@ -115,25 +105,15 @@ body {
   margin: 0 0 20px;
 }
 
-.add__task_input {
-  width: 318px;
-}
-
 /* Task list */
 .todo__incompleted > *,
 .todo__completed > * {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.todo__incompleted > * > *,
-.todo__completed > * > * {
-  vertical-align: middle;
 }
 
 .todo__checkbox {
@@ -142,23 +122,18 @@ body {
 
 .todo__label {
   padding-left: 10px;
-  box-sizing: border-box;
   font-size: 18px;
-  width: 226px;
-}
-
-.todo__input {
-  width: 226px;
+  flex-grow: 1;
 }
 
 .todo__delete_img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
-}
 
-.todo__delete_img:hover {
-  transform: rotateZ(0);
+  &:hover {
+    transform: rotateZ(0);
+  }
 }
 
 /* Completed */
@@ -174,7 +149,6 @@ body {
 
 .todo__edit_mode .todo__input {
   display: inline-block;
-  width: 224px;
 }
 
 .todo__edit_mode .todo__label {
